--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ install:
   - pip install -r requirements.dev.txt -r requirements.dist.txt
 script:
   - python manage.py test
+  - coverage run --source='tweeter' manage.py test
   - codecov
